fix admin tab display on mobile view

--- a/src/components/AppWrapper/Navbar/Navbar.css
+++ b/src/components/AppWrapper/Navbar/Navbar.css
@@ -122,6 +122,11 @@ li.navtab a.active,
     display: none;
   }
 
+  li.navtab-inner .nav-text {
+    display: flex;
+    height: 20px;
+  }
+
   .tab-wrapper {
     padding: 10px 0;
     margin: 25px 0 50px;
